<?xml version="1.0"?>
<package format="3">
  <name>my_envs</name>
  <version>0.0.0</version>
  <description>ROS2 package for Webots simulation with indoor and outdoor environments.</description>
  <maintainer email="rpi@todo.todo">rpi</maintainer>
  <license>TODO: License declaration</license>

  <!-- Dependencies for running the Webots ROS2 package -->
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>webots_ros2_control</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <!-- Export build configuration -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

